@slidy/element - fix dev api

--- a/packages/element/public/index.html
+++ b/packages/element/public/index.html
@@ -1,94 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=auto"
-        />
+        <meta name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=auto" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
 
-        <link
-            href="assets/splashscreens/iphone5_splash.png"
+        <link href="assets/splashscreens/iphone5_splash.png"
             media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphone6_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphone6_splash.png"
             media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphoneplus_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphoneplus_splash.png"
             media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphonex_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphonex_splash.png"
             media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphonexr_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphonexr_splash.png"
             media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphonexsmax_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphonexsmax_splash.png"
             media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphone12_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphone12_splash.png"
             media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/ipad_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipad_splash.png"
             media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/ipadpro1_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipadpro1_splash.png"
             media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/ipadpro3_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipadpro3_splash.png"
             media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/ipadpro2_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipadpro2_splash.png"
             media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
+            rel="apple-touch-startup-image" />
 
-        <link
-            rel="apple-touch-icon"
-            type="image/png"
-            sizes="any"
-            href="assets/apple-touch-icon.png"
-        />
-        <link
-            rel="apple-touch-icon-precomposed"
-            type="image/png"
-            sizes="any"
-            href="assets/apple-touch-icon-precomposed.png"
-        />
+        <link rel="apple-touch-icon" type="image/png" sizes="any" href="assets/apple-touch-icon.png" />
+        <link rel="apple-touch-icon-precomposed" type="image/png" sizes="any"
+            href="assets/apple-touch-icon-precomposed.png" />
         <link rel="icon" type="image/png" href="assets/favicon.png" />
         <link rel="stylesheet" defer href="dev.css" />
         <link rel="stylesheet" href="build/element.css" />
 
         <script type="text/javascript" src="https://unpkg.com/@slidy/easing/dist/index.js"></script>
-        <script
-            type="text/javascript"
-            src="https://unpkg.com/@slidy/animation/dist/index.js"
-        ></script>
+        <script type="text/javascript" src="https://unpkg.com/@slidy/animation/dist/index.js"></script>
 
         <title id="title"></title>
 
@@ -96,7 +61,7 @@
             import * as easings from './build/easing.js';
             import * as animations from './build/animation.js';
             import * as utils from './utils.js';
-            import { getPhotos } from './api.js';
+            import { getSlides } from './api.js';
             import { setEvents } from './env.js';
             import './build/element.js';
 
@@ -119,7 +84,7 @@
             };
             window.position = 0;
             window.page = () => utils.randomQ(1, 99);
-            window.getPhotos = getPhotos;
+            window.getSlides = getSlides;
             window.setEvents = setEvents;
 
             console.log('module window:', window);
@@ -141,11 +106,7 @@
                 <img width="1280" height="800" src="https://picsum.photos/id/16/1280/800.jpg" />
                 <img width="1280" height="800" src="https://picsum.photos/id/17/1280/800.jpg" /> -->
             </slidy-element>
-            <slidy-element
-                id="thumbs"
-                index="4"
-                style="--width: 100px; --height: 100px; --gap: 1rem; --flow: row"
-            >
+            <slidy-element id="thumbs" index="4" style="--width: 100px; --height: 100px; --gap: 1rem; --flow: row">
             </slidy-element>
         </main>
         <script>
@@ -156,7 +117,7 @@
                 .then(({ version }) => {
                     title.innerText = `Slidy ${version} - Element`;
                     header.innerHTML = `Slidy <span>${version}</span><sub>Element</sub><sub id="stats" />`;
-                    getPhotos(page(), options.length).then(setEvents);
+                    getSlides(options.length).then(setEvents);
                 });
             element.setAttribute('easing', SlidyEasing.back.toString());
             element.setAttribute('animation', SlidyAnimation.stairs.toString());
@@ -165,7 +126,7 @@
         <footer>
             <nav>
                 <button id="prev" onclick="node.setAttribute('index', node.index-1)">←</button>
-                <button id="reload" onclick="getPhotos(page(), options.length);">
+                <button id="reload" onclick="getSlides( options.length);">
                     <i class="icon icon-refresh"></i>
                 </button>
                 <button id="next" onclick="node.setAttribute('index', node.index+1)">→</button>
@@ -181,128 +142,55 @@
 
             <form>
                 <fieldset>
-                    <label title="axis"
-                        >axis
-                        <select
-                            id="axis"
-                            name="axis"
-                            onchange="node.update({ axis: this.value })"
-                        ></select>
+                    <label title="axis">axis
+                        <select id="axis" name="axis" onchange="node.update({ axis: this.value })"></select>
                     </label>
-                    <label title="snap"
-                        >snap
-                        <select
-                            id="snap"
-                            name="snap"
-                            onchange="node.update({ snap: this.value })"
-                        ></select>
+                    <label title="snap">snap
+                        <select id="snap" name="snap" onchange="node.update({ snap: this.value })"></select>
                     </label>
-                    <label title="animation"
-                        >animation
-                        <select
-                            id="animation"
-                            name="animation"
-                            onchange="node.update({ animation: animations[this.value] })"
-                        ></select>
+                    <label title="animation">animation
+                        <select id="animation" name="animation"
+                            onchange="node.update({ animation: animations[this.value] })"></select>
                     </label>
-                    <label title="easing"
-                        >easing
-                        <select
-                            id="easing"
-                            name="easing"
-                            onchange="node.update({ easing: easings[this.value] })"
-                        ></select>
+                    <label title="easing">easing
+                        <select id="easing" name="easing"
+                            onchange="node.update({ easing: easings[this.value] })"></select>
                     </label>
                 </fieldset>
             </form>
 
             <form>
                 <fieldset>
-                    <label title="clamp"
-                        >clamp
-                        <input
-                            id="clamp"
-                            onchange="node.update({ clamp: +this.value })"
-                            name="clamp"
-                            type="number"
-                            size="1"
-                            step="1"
-                            min="0"
-                            max="3"
-                        />
+                    <label title="clamp">clamp
+                        <input id="clamp" onchange="node.update({ clamp: +this.value })" name="clamp" type="number"
+                            size="1" step="1" min="0" max="3" />
                     </label>
-                    <label title="sensity"
-                        >sensity
-                        <input
-                            id="sensity"
-                            onchange="node.update({ sensity: +this.value })"
-                            name="sensity"
-                            type="number"
-                            size="2"
-                            step="1"
-                            min="0"
-                            max="100"
-                        />
+                    <label title="sensity">sensity
+                        <input id="sensity" onchange="node.update({ sensity: +this.value })" name="sensity"
+                            type="number" size="2" step="1" min="0" max="100" />
                     </label>
-                    <label title="indent"
-                        >indent
-                        <input
-                            id="indent"
-                            onchange="node.update({ indent: +this.value })"
-                            name="indent"
-                            type="number"
-                            size="1"
-                            step="0.1"
-                            min="-2"
-                            max="2"
-                        />
+                    <label title="indent">indent
+                        <input id="indent" onchange="node.update({ indent: +this.value })" name="indent" type="number"
+                            size="1" step="0.1" min="-2" max="2" />
                     </label>
-                    <label title="duration"
-                        >duration
-                        <input
-                            id="duration"
-                            onchange="node.update({ duration: +this.value })"
-                            name="duration"
-                            type="number"
-                            size="2"
-                            step="1"
-                            min="100"
-                            max="1000"
-                        />
+                    <label title="duration">duration
+                        <input id="duration" onchange="node.update({ duration: +this.value })" name="duration"
+                            type="number" size="2" step="1" min="100" max="1000" />
                     </label>
-                    <label title="gravity"
-                        >gravity
-                        <input
-                            id="gravity"
-                            onchange="node.update({ gravity: +this.value })"
-                            name="gravity"
-                            type="number"
-                            size="1"
-                            step="0.1"
-                            min="0.1"
-                            max="2"
-                        />
+                    <label title="gravity">gravity
+                        <input id="gravity" onchange="node.update({ gravity: +this.value })" name="gravity"
+                            type="number" size="1" step="0.1" min="0.1" max="2" />
                     </label>
                 </fieldset>
             </form>
 
             <form>
                 <fieldset>
-                    <label title="length"
-                        >length
-                        <input
-                            id="length"
-                            onchange="utils.changeLength(this)"
-                            name="length"
-                            type="number"
-                            size="1"
-                            step="1"
-                            min="1"
-                            max="50"
-                        />
+                    <label title="length">length
+                        <input id="length" onchange="utils.changeLength(this)" name="length" type="number" size="1"
+                            step="1" min="1" max="50" />
                     </label>
-                    <label title="flow"
-                        >flow
+                    <label title="flow">flow
                         <select id="flow" name="flow" onchange="utils.setFlow(this.value)">
                             <option>row</option>
                             <option>row-reverse</option>
@@ -310,16 +198,13 @@
                             <option>column-reverse</option>
                         </select>
                     </label>
-                    <label title="width"
-                        >width
+                    <label title="width">width
                         <input onchange="utils.setVar(this)" name="width" size="4" />
                     </label>
-                    <label title="height"
-                        >height
+                    <label title="height">height
                         <input onchange="utils.setVar(this)" name="height" size="5" />
                     </label>
-                    <label title="gap"
-                        >gap
+                    <label title="gap">gap
                         <input onchange="utils.setVar(this)" name="gap" size="4" />
                     </label>
                 </fieldset>
@@ -347,33 +232,23 @@
             <h2>Packages</h2>
             <ul>
                 <li>
-                    <a href="https://github.com/Valexr/slidy/tree/master/packages/core"
-                        >@slidy/core</a
-                    >
+                    <a href="https://github.com/Valexr/slidy/tree/master/packages/core">@slidy/core</a>
                     - Core sliding script
                 </li>
                 <li>
-                    <a href="https://github.com/Valexr/slidy/tree/master/packages/media"
-                        >@slidy/media</a
-                    >
+                    <a href="https://github.com/Valexr/slidy/tree/master/packages/media">@slidy/media</a>
                     - Observable media
                 </li>
                 <li>
-                    <a href="https://github.com/Valexr/slidy/tree/master/packages/easing"
-                        >@slidy/easing</a
-                    >
+                    <a href="https://github.com/Valexr/slidy/tree/master/packages/easing">@slidy/easing</a>
                     - Easing functions
                 </li>
                 <li>
-                    <a href="https://github.com/Valexr/slidy/tree/master/packages/animation"
-                        >@slidy/animation</a
-                    >
+                    <a href="https://github.com/Valexr/slidy/tree/master/packages/animation">@slidy/animation</a>
                     - Animation functions
                 </li>
                 <li>
-                    <a href="https://github.com/Valexr/slidy/tree/master/packages/svelte"
-                        >@slidy/svelte</a
-                    >
+                    <a href="https://github.com/Valexr/slidy/tree/master/packages/svelte">@slidy/svelte</a>
                     - SvelteJS template
                 </li>
             </ul>
@@ -416,4 +291,5 @@
         </article>
         <br />
     </body>
+
 </html>
