--- a/packages/element/public/index.html
+++ b/packages/element/public/index.html
@@ -100,11 +100,11 @@
 
         <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
             <slidy-element id="node" tabindex="0" index="4" snap="center">
-                <!-- <img width="1280" height="800" src="https://picsum.photos/id/13/1280/800.jpg" />
-                <img width="1280" height="800" src="https://picsum.photos/id/14/1280/800.jpg" />
-                <img width="1280" height="800" src="https://picsum.photos/id/15/1280/800.jpg" />
-                <img width="1280" height="800" src="https://picsum.photos/id/16/1280/800.jpg" />
-                <img width="1280" height="800" src="https://picsum.photos/id/17/1280/800.jpg" /> -->
+                <!-- <img width="640" height="400" src="https://source.unsplash.com/random/1280x800.jpg" />
+                <img width="500" height="400" src="https://source.unsplash.com/random/1000x800.jpg" />
+                <img width="400" height="400" src="https://source.unsplash.com/random/800x800.jpg" />
+                <img width="400" height="500" src="https://source.unsplash.com/random/800x1000.jpg" />
+                <img width="400" height="640" src="https://source.unsplash.com/random/800x1200.jpg" /> -->
             </slidy-element>
             <slidy-element id="thumbs" index="4" style="--width: 100px; --height: 100px; --gap: 1rem; --flow: row">
             </slidy-element>
