@slidy/element - fix dev

--- a/packages/element/public/index.html
+++ b/packages/element/public/index.html
@@ -98,7 +98,7 @@
             <a id="github" href="https://github.com/Valexr/Slidy"></a>
         </header>
 
-        <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
+        <main id="main" style=" --flow: row; --width: auto; --height: 375px; --gap: 2rem;">
             <slidy-element id="node" tabindex="0" index="4" snap="center">
                 <!-- <img width="640" height="400" src="https://source.unsplash.com/random/1280x800.jpg" />
                 <img width="500" height="400" src="https://source.unsplash.com/random/1000x800.jpg" />
@@ -106,7 +106,7 @@
                 <img width="400" height="500" src="https://source.unsplash.com/random/800x1000.jpg" />
                 <img width="400" height="640" src="https://source.unsplash.com/random/800x1200.jpg" /> -->
             </slidy-element>
-            <slidy-element id="thumbs" index="4" style="--width: 100px; --height: 100px; --gap: 1rem; --flow: row">
+            <slidy-element id="thumbs" index="4" style=" --flow: row; --width: 75px; --height: 75px; --gap: 1rem;">
             </slidy-element>
         </main>
         <script>
