--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -105,7 +105,7 @@
                 easing: easings.lenear,
             };
             window.limit = 9;
-            window.theme = '';
+            window.theme = 'jpg';
             window.position = 0;
             window.slidy = null;
             window.slidyT = null;
