--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -235,14 +235,14 @@
                     </label>
                 </fieldset>
             </form>
-            <form onsubmit="event.preventDefault(); getSlides(limit, theme)">
+            <!-- <form onsubmit="event.preventDefault(); getSlides(limit, theme)">
                 <fieldset>
                     <label title="themes">themes
                         <input type="text" name="themes" placeholder="themes, of, photos"
                             oninput="setThemes(this.value)" />
                     </label>
                 </fieldset>
-            </form>
+            </form> -->
         </footer>
 
         <!-- <section id="s1">
