@slidy/core - fix snap === 'deck'

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -99,7 +99,7 @@
                 gravity: 1.2,
                 duration: 375,
                 loop: false,
-                snap: 'center',
+                snap: 'deck',
                 axis: 'x',
                 animation: animations.flip,
                 easing: easings.lenear,
