@slidy/core - fix unsnapped loop mode

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -98,8 +98,8 @@
                 sensity: 2.5,
                 gravity: 1.2,
                 duration: 375,
-                loop: false,
-                snap: 'center',
+                loop: true,
+                snap: '',
                 axis: 'x',
                 animation: animations.flip,
                 easing: easings.lenear,
