--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -58,6 +58,7 @@
             import { media as mediaStorage } from './build/media.js';
             import * as easings from './build/easing.js';
             import * as animations from './build/animation.js';
+            import { log, marquee } from './build/plugins.js';
             import * as utils from './utils.js';
             import { getSlides } from './api.js';
             import { setEvents } from './env.js';
@@ -101,6 +102,7 @@
                 loop: false,
                 snap: 'center',
                 axis: 'x',
+                plugins: [log, marquee],
                 // plugins: [({ node, options, instance }) => {
                 //     // console.log({ node, options, instance });
                 //     const handle = (e) => instance.to(options.index);
@@ -112,7 +114,7 @@
                 //     });
                 // }],
                 animation: animations.flip,
-                easing: easings.elastic,
+                easing: easings.sine,
             };
             window.limit = 9;
             window.theme = 'jpg';
@@ -138,7 +140,7 @@
                     title.innerText = `Slidy ${version} - NativeJS`;
                     header.innerHTML = `Slidy <span>${version}</span><sub>nativeJS</sub><sub id="stats" />`;
                     getSlides(limit, theme).then(() => {
-                        slidy = slidyCore(node);
+                        slidy = slidyCore(node, options);
                         slidyT = slidyCore(thumbs, { index: options.index, snap: 'center' });
                         setTimeout(setEvents);
                     });
