@slidy/plugins - play

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -58,7 +58,7 @@
             import { media as mediaStorage } from './build/media.js';
             import * as easings from './build/easing.js';
             import * as animations from './build/animation.js';
-            import { log, marquee } from './build/plugins.js';
+            import { log, marquee, play } from './build/plugins.js';
             import * as utils from './utils.js';
             import { getSlides } from './api.js';
             import { setEvents } from './env.js';
@@ -102,7 +102,7 @@
                 loop: false,
                 snap: 'center',
                 axis: 'x',
-                plugins: [log, marquee],
+                plugins: [play],
                 animation: animations.flip,
                 easing: easings.sine,
             };
