fix all builds & types declaration

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -103,7 +103,7 @@
                 loop: false,
                 snap: 'center',
                 axis: 'x',
-                plugins: [log(), marquee()],
+                // plugins: [log(), marquee()],
                 animation: animations.flip,
                 easing: easings.sine,
             };
