--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -103,7 +103,7 @@
                 loop: false,
                 snap: 'center',
                 axis: 'x',
-                // plugins: [log(), marquee()],
+                plugins: [play()],
                 animation: animations.flip,
                 easing: easings.sine,
             };
@@ -171,7 +171,7 @@
                 <button id="next" onclick="slidy.to(options.index + 1, +100)">→</button>
                 <!-- <button id="-" onclick="node.removeChild(node.lastChild);">-</button> -->
                 <!-- <button id="+" onclick="node.appendChild(createElement('li'))">+</button> -->
-                <button class="active" onclick="playButton(this)">stop</button>
+                <button class="" onclick="playButton(this)">play</button>
             </nav>
 
             <!-- <nav id="dots"></nav> -->
