@slidy/plugins - add autostop logic to play()

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -103,7 +103,7 @@
                 loop: false,
                 snap: 'center',
                 axis: 'x',
-                plugins: [play(null, () => slidy.to(options.index + 1))],
+                plugins: [play()],
                 animation: animations.flip,
                 easing: easings.sine,
             };
