@slidy/core - add autoplay to dev

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -171,7 +171,7 @@
                 <button id="next" onclick="slidy.to(options.index + 1, +100)">→</button>
                 <!-- <button id="-" onclick="node.removeChild(node.lastChild);">-</button> -->
                 <!-- <button id="+" onclick="node.appendChild(createElement('li'))">+</button> -->
-                <button class="" onclick="playButton(this)">play</button>
+                <button id="autoplay" class="" onclick="playButton(this)">play</button>
             </nav>
 
             <!-- <nav id="dots"></nav> -->
