@slidy/core - add plugins to iife

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -50,6 +50,7 @@
             href="assets/apple-touch-icon-precomposed.png" />
         <link rel="icon" type="image/png" href="assets/favicon.png" />
         <link rel="stylesheet" href="dev.css" />
+        <script src="build/index.js"></script>
 
         <title id="title"></title>
 
