@slidy/core - fix snap: 'deck' edges

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -101,7 +101,7 @@
                 gravity: 1.2,
                 // duration: 375,
                 loop: false,
-                snap: 'center',
+                snap: '',
                 axis: 'x',
                 plugins: [play()],
                 animation: animations.flip,
